# shadowmap

./: .gitignore  README.md
docs/: README.md
examples/: README.md
scripts/: convert.py
src/: CMakeLists.txt  Makefile  build.cpp  image.cpp  image.hpp  linalg.cpp  linalg.hpp  mesh.cpp  render.cpp  scene.cpp  shadowmap.hpp  utils.cpp  utils.hpp
tests/: CMakeLists.txt  Makefile  scene1.cpp  scene2.cpp  scene3.cpp
